<resources>
    <string name="app_name">Sleeperbot</string>
    <string name="alarms_filename">io.github.cabrito.sleeperbot.ALARMS_FILE_KEY</string>
    <string name="activity_alarms_button_newalarm">New Alarm</string>
    <string name="activity_dismiss_button_dismissalarm">Dismiss Alarm</string>

    <!-- SetAlarmActivity -->
    <string name="activity_setalarm_alarmtitle">Alarm Title</string>
    <string name="activity_setalarm_none">None</string>

    <!-- Names of the Days of the Week -->
    <string name="short_sunday">Sun</string>
    <string name="short_monday">Mon</string>
    <string name="short_tuesday">Tue</string>
    <string name="short_wednesday">Wed</string>
    <string name="short_thursday">Thu</string>
    <string name="short_friday">Fri</string>
    <string name="short_saturday">Sat</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>

    <!-- Dialog Fragments -->
    <string name="dialog_set_daysofweek_title">Set Alarm Days</string>
    <string name="dialog_set_daysofweek_positive">OK</string>
    <string name="dialog_set_daysofweek_negative">Cancel</string>

</resources>
