<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.cabrito.sleeperbot.activities.SetAlarmActivity">


    <!-- TextView, clickable to bring up TimePicker dialog box -->
    <TextView
        android:id="@+id/textview_activity_setalarm_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="4:20 PM"/>

    <!-- TextView, allowing the user to give the alarm a title -->
    <EditText
        android:id="@+id/edittext_activity_setalarm_alarmtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/activity_setalarm_alarmtitle"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_activity_setalarm_time"/>

    <!-- Checkboxes for which days the alarm should be set -->
    <LinearLayout
        android:id="@+id/linearlayout_activity_setalarm_daysofweek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edittext_activity_setalarm_alarmtitle"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_activity_setalarm_setdaysofweek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_set_daysofweek_title"/>

        <TextView
            android:id="@+id/textview_activity_setalarm_daysofweek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="18sp"
            tools:text="Mon Tue Wed Thu"/>
    </LinearLayout>

    <!-- Textview, bringing up Ringtone Selection -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_activity_setalarm_daysofweek"
        android:textSize="18sp"
        tools:text="Ringtone:"/>
    <!-- RadioButton: Should volume fade? -->
    <!-- Checkbox, should vibrate be enabled? -->
    <!-- Spinner, what CAPTCHA should we use? (if any) -->
    <!-- RadioButton: Should Snooze be allowed? -->
    <!-- TEMPORARY: Button to set alarm -->
    <Button
        android:id="@+id/button_activity_setalarm_setalarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/activity_alarms_button_newalarm"/>

</android.support.constraint.ConstraintLayout>
